Feat: add content to Product & Cart pgs

--- a/index.html
+++ b/index.html
@@ -51,9 +51,8 @@
       <div class="row">
         <div class="main-product-wrapper">
           <div class="product">
-            <img src="placeholder-image.jpg" alt="Product 1">
-            <h3>Product 1</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <h3>Product Line</h3>
+            <p>Tech to Tank Tops!</p>
           </div>
         </div>
         <!-- Repeat the above column divs for the remaining products -->
@@ -87,9 +86,8 @@
       <div class="row">
         <div class="col-md-4">
           <div class="product">
-            <img src="placeholder-image.jpg" alt="Product 1">
-            <h3>Product 1</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <h3>Cart Items</h3>
+            <p>Check out!</p>
           </div>
         </div>
         <!-- Repeat the above column divs for the remaining products -->
