--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>TealRay Boutique</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <link rel="stylesheet" href="scss/styles.css">
 
 
 <!-- <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -48,8 +49,8 @@
 
   <section class="page products" id="products">
     <div class="products-container" id="productContainer">
-      <div class="row">
-        <div class="main-product-wrapper">
+      <div class="row" id="productRow" >
+        <div class="main-product-wrapper" id="mainProductWrapper">
           <div class="product">
             <h3>Product Line</h3>
             <p>Tech to Tank Tops!</p>
