Feat: update content for main page

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <section class="page hero" id="home">
     <div class="container">
       <h1>TealRay Boutique</h1>
-      <h2> Fashion's Enchanted Oasis: Dive Deep into Unparalleled Style!</h2>
+      <h2> Unlock the Best of Fashion and Innovation</h2>
       <a href="#products" class="btn btn-primary">Explore</a>
     </div>
   </section>
@@ -53,7 +53,7 @@
         <div class="main-product-wrapper" id="mainProductWrapper">
           <div class="product">
             <h3>Product Line</h3>
-            <p>Tech to Tank Tops!</p>
+            <p>A Collection Blending Fashion, Functionality, and Fun</p>
           </div>
         </div>
         <!-- Repeat the above column divs for the remaining products -->
