Feat: format product grid

--- a/index.html
+++ b/index.html
@@ -48,16 +48,10 @@
   </section>
 
   <section class="page products" id="products">
-    <div class="products-container" id="productContainer">
-      <div class="row" id="productRow" >
-        <div class="main-product-wrapper" id="mainProductWrapper">
-          <div class="product">
-            <h3>Product Line</h3>
-            <p>A Collection Blending Fashion, Functionality, and Fun</p>
-          </div>
-        </div>
-        <!-- Repeat the above column divs for the remaining products -->
-      </div>
+    <h3>Product Line</h3>
+    <p>A Collection Blending Fashion, Functionality, and Fun</p>
+    <div class="products-container text-center" id="productContainer"> 
+      <div class="product-row" id="rowProduct"></div>    
     </div>
   </section>
 
