Feat: format card

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
   <section class="page products" id="products">
     <h3>Product Line</h3>
     <p>A Collection Blending Fashion, Functionality, and Fun</p>
-    <div class="products-container text-center" id="productContainer"> 
-      <div class="product-row" id="rowProduct"></div>    
+    <div class="products-container text-center " id="productContainer"> 
+      <div class="product-row justify-content-center" id="rowProduct"></div>    
     </div>
   </section>
 
