Feat: configure hero navigation

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="text-overlay position-absolute top-50 start-50 translate-middle text-center text-white">
         <h1 class="display-4">TealRay Boutique</h1>
         <h2 class="h4">Unlock the Best of Fashion and Innovation</h2>
-        <a href="#products" class="btn btn-grad"> Explore </a> 
+        <a  class="btn btn-grad" href="#products">Explore</a> 
       </div>
     </div>
   </section>
