--- a/index.html
+++ b/index.html
@@ -1,125 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TealRay Boutique</title>
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-  <link rel="stylesheet" href="scss/styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>TealRay Boutique</title>
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="scss/styles.css" />
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light shadow">
+      <a class="navbar-brand" href="#home">
+        <img
+          class="nav-logo img-fluid"
+          src="assets/snackcrate-logo2.png"
+          alt="logo"
+          width="50"
+          height="24"
+        />
+        TealRay Boutique
+      </a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div
+        class="collapse navbar-collapse justify-content-end text-white"
+        id="navbarNav"
+      >
+        <ul class="navbar-nav text-white">
+          <li class="nav-item">
+            <a class="nav-link" href="#products">Products</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contact">Contact Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#cartItems">Cart</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
 
+    <section class="page hero" id="home">
+      <div class="position-relative top-0 start-0 end-0 bottom-0">
+        <img
+          src="./assets/alice-alinari-CTlRkofxgRY-unsplash.jpg"
+          alt="TealRay Boutique Image"
+          class="img-fluid"
+        />
+        <div
+          class="text-overlay position-absolute top-50 start-50 translate-middle text-center text-white"
+        >
+          <h1 class="display-4">TealRay Boutique</h1>
+          <h2 class="h4">Unlock the Best of Fashion and Innovation</h2>
+          <a class="btn btn-grad" href="#products"> Explore </a>
+        </div>
+      </div>
+    </section>
 
-</head>
-<body>
-  
-  <style>
-    .btn-grad {
-      background-image: linear-gradient(to right, #4CB8C4 0%, #3CD3AD 51%, #4CB8C4 100%);
-      background-position: left center;
-      background-size: 200% auto;
-      color: #fff;
-      text-align: center;
-      text-transform: uppercase;
-      transition: .5s;
-      margin: 10px;
-      padding: 15px 45px;
-      box-shadow: 0 0 20px #eee;
-      border-radius: 10px;
-      display: block;
-      text-decoration: none;
-    }
-  
-    .btn-grad:hover {
-      background-position: right center;
-    }
-  </style>
+    <section class="page products" id="products">
+      <div class="container">
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light text-white">
-    <a class="navbar-brand" href="#home">
-
-    <img class="nav-logo img-fluid" src="assets/snackcrate-logo2.png" alt="logo" width="50" height="24"/>
-    TealRay Boutique
-    </a>
-    <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-end text-white" id="navbarNav">
-      <ul class="navbar-nav text-white">
-        <li class="nav-item">
-          <a class="nav-link" href="#products">Products</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#contact">Contact Us</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#cartItems">Cart</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-
-  <section class="page hero" id="home">
-    <div class="position-relative top-0 start-0 end-0 bottom-0">
-      <img src="./assets/alice-alinari-CTlRkofxgRY-unsplash.jpg" alt="TealRay Boutique Image" class="img-fluid">
-      <div class="text-overlay position-absolute top-50 start-50 translate-middle text-center text-white">
-        <h1 class="display-4">TealRay Boutique</h1>
-        <h2 class="h4">Unlock the Best of Fashion and Innovation</h2>
-        <a  class="btn btn-grad" href="#products">Explore</a> 
+      <div class="pg-title-wrapper p-4">
+        <h2>Product Line</h2>
+        <p>A Collection Blending Fashion, Functionality, and Fun</p>
+      </div>
+      <div class="products-container text-center" id="productContainer">
+        <div class="product-row justify-content-center" id="rowProduct"></div>
       </div>
     </div>
-  </section>
+    </section>
 
- 
-  
- 
-
-  <section class="page products" id="products">
-    <h3>Product Line</h3>
-    <p>A Collection Blending Fashion, Functionality, and Fun</p>
-    <div class="products-container text-center " id="productContainer"> 
-      <div class="product-row justify-content-center" id="rowProduct"></div>    
-    </div>
-  </section>
-
-  <section class="page contact" id="contact">
-    <div class="container">
-      <h2>Contact Us</h2>
-      <form>
-        <div class="mb-3">
-          <label for="name" class="form-label">Name</label>
-          <input type="text" class="form-control" id="name" placeholder="Enter your name">
+    <section class="page contact" id="contact">
+      <div class="container">
+        <div class="pg-title-wrapper p-4">
+          <h2>Contact Us</h2>
         </div>
-        <div class="mb-3">
-          <label for="email" class="form-label">Email</label>
-          <input type="email" class="form-control" id="email" placeholder="Enter your email">
-        </div>
-        <div class="mb-3">
-          <label for="message" class="form-label">Message</label>
-          <textarea class="form-control" id="message" rows="3" placeholder="Enter your message"></textarea>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
-    </div>
-  </section>
-
-  <section class="page cart-items" id="cartItems">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4">
-          <div class="product">
-            <h3>Cart Items</h3>
-            <p>Check out!</p>
+        <form>
+          <div class="mb-3">
+            <label for="name" class="form-label">Name</label>
+            <input
+              type="text"
+              class="form-control"
+              id="name"
+              placeholder="Enter your name"
+            />
           </div>
-        </div>
-        <!-- Repeat the above column divs for the remaining products -->
+          <div class="mb-3">
+            <label for="email" class="form-label">Email</label>
+            <input
+              type="email"
+              class="form-control"
+              id="email"
+              placeholder="Enter your email"
+            />
+          </div>
+          <div class="mb-3">
+            <label for="message" class="form-label">Message</label>
+            <textarea
+              class="form-control"
+              id="message"
+              rows="3"
+              placeholder="Enter your message"
+            ></textarea>
+          </div>
+          <div class="d-flex justify-content-end">
+            <button type="submit" class="btn btn-grad">Submit</button>
+          </div>
+        </form>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
-  <script type="text/javascript" src="index.js"></script>
-  <script src="utilities/apiCalls.js"></script>
-</body>
+    <section class="page cart-items" id="cartItems">
+      <div class="container">
+        <div class="pg-title-wrapper p-4">
+          <h2>Cart Items</h2>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="product">
+              <button type="submit" class="btn btn-grad">Check out!</button>
+            </div>
+          </div>
+          <!-- Repeat the above column divs for the remaining products -->
+        </div>
+      </div>
+    </section>
+
+    <script
+      src="https://code.jquery.com/jquery-3.7.0.min.js"
+      integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
+      integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
+      crossorigin="anonymous"
+    ></script>
+    <script type="text/javascript" src="index.js"></script>
+    <script src="utilities/apiCalls.js"></script>
+  </body>
 </html>
