Feat: add drop down menu

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     </section>
 
     <section class="page cart-items" id="cartItems">
-      <div class="container">
+      <div class="container" id="container">
         <div class="pg-title-wrapper p-4">
      <h2>Cart Items </h2>
          
