Feat: add search forms

--- a/index.html
+++ b/index.html
@@ -79,6 +79,29 @@
         <h2>Product Line</h2>
         <p>A Collection Blending Fashion, Functionality, and Fun</p>
       </div>
+      <div class="product-btn-container d-flex justify-content-center align-items-center">
+        <div class="input-group">
+          <div class="form-outline">
+            <input type="search" id="form1" class="form-control" placeholder="Search by Name" />
+            <label class="form-label" for="form1"></label>
+          </div>
+        <button class="btn btn-grad btn-sort-name"><i class="fas fa-search"></i></button>
+        </div>
+        <div class="input-group">
+          <div class="form-outline">
+            <input type="search" id="form1" class="form-control" placeholder="Sort Alphabetically"/>
+            <label class="form-label" for="form1"></label>
+          </div>
+        <button class="btn btn-grad btn-filter-type"><i class="fas fa-search"></i></button>
+        </div>
+        <div class="input-group">
+          <div class="form-outline">
+            <input type="search" id="form1" class="form-control" placeholder="Sort by Most Popular"/>
+            <label class="form-label" for="form1"></label>
+          </div>
+        <button class="btn btn-grad btn-sort-stars"> <i class="fas fa-search"></i></button>
+        </div>
+      </div>
       <div class="products-container text-center" id="productContainer">
         <div class="product-row justify-content-center" id="rowProduct"></div>
       </div>
