Feat: adjust search buttons

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <h2>Product Line</h2>
         <p>A Collection Blending Fashion, Functionality, and Fun</p>
       </div>
-      <div class="product-btn-container d-flex justify-content-center align-items-center">
+      <div class="product-btn-container d-flex justify-content-end align-items-center">
         <div class="input-group">
           <div class="form-outline">
             <input type="search" id="form1" class="form-control" placeholder="Search by Name" />
@@ -87,24 +87,14 @@
           </div>
         <button class="btn btn-grad btn-sort-name"><i class="fas fa-search"></i></button>
         </div>
-        <div class="input-group">
-          <div class="form-outline">
-            <input type="search" id="form1" class="form-control" placeholder="Sort Alphabetically"/>
-            <label class="form-label" for="form1"></label>
-          </div>
-        <button class="btn btn-grad btn-filter-type"><i class="fas fa-search"></i></button>
-        </div>
-        <div class="input-group">
-          <div class="form-outline">
-            <input type="search" id="form1" class="form-control" placeholder="Sort by Most Popular"/>
-            <label class="form-label" for="form1"></label>
-          </div>
-        <button class="btn btn-grad btn-sort-stars"> <i class="fas fa-search"></i></button>
-        </div>
+        <button class="btn btn-grad btn-filter-type">Sort Alphabetically</button>
+        <button class="btn btn-grad btn-sort-stars"> Sort by Most Popular</button>
+
       </div>
       <div class="products-container text-center" id="productContainer">
         <div class="product-row justify-content-center" id="rowProduct"></div>
       </div>
+      <div class="search-container" id="searchContainer"></div>
     </div>
     </section>
 
