Feat: add responsive design to product page and shopping cart for sm/med/lg screens

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <h2>Product Line</h2>
         <p>A Collection Blending Fashion, Functionality, and Fun</p>
       </div>
-      <div class="product-btn-container d-flex justify-content-end align-items-center">
+      <div class="product-btn-container d-flex justify-content-end align-items-center justify-content-center">
         <div class="input-group d-flex justify-content-end ">
           <div class="form-outline">
             <input type="search" id="searchByName" class="form-control search-by-name" placeholder="Search by Name" />
@@ -138,7 +138,7 @@
       </div>
     </section>
     <section class="page cart-items" id="cartItems">
-      <div class="container" id="container">
+      <div class="container cart-items-container" id="container">
         <div class="pg-title-wrapper p-4">
           <h2>Cart Items</h2>
         </div>
