Feat: add responsive design to nav bar and to shopping cart purchase button

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
         <div
           class="text-overlay position-absolute top-50 start-50 translate-middle text-center text-white"
         >
-          <h1 class="display-4">TealRay Boutique</h1>
-          <h2 class="h4">Unlock the Best of Fashion and Innovation</h2>
+          <h1 class="display-4 hero-title">TealRay Boutique</h1>
+          <h2 class="hero-sub-title" >Unlock the Best of Fashion and Innovation</h2>
           <a class="nav-link btn btn-grad" href="#products"> Explore </a>
         </div>
       </div>
