Feat: increase & decrease items config WIP

--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
               <th scope="col">Price</th>
               <th scope="col">Total Item Price</th>
               <th scope="col">Qty</th>
+              <th scope="col">+ -</th>
               <th>Delete All</th>
 
             </tr>
