--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 <p>An email confirmation has been sent to your email address.</p>
               </div>
               <div class="modal-footer">
-                <button type="button" class="btn btn-secondary btn-grad" data-dismiss="modal">Close</button>
+                <button type="button" class="close btn btn-secondary btn-grad" data-dismiss="modal">Close</button>
               </div>
             </div>
           </div>
