--- a/index.html
+++ b/index.html
@@ -131,9 +131,30 @@
               placeholder="Enter your message"
             ></textarea>
           </div>
-          <div class="d-flex justify-content-end">
-            <button type="submit" class="nav-link btn btn-grad" href="#submitForm">Submit</button>
+         
+          <div class="modal fade" id="submitModal" tabindex="-1" role="dialog" aria-labelledby="submitModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="congratsModalLabel">Thank you for reaching out!!</h5>
+                </div>
+                <div class="modal-body">
+                  <p>An email confirmation has been sent to your email address, and we will contact you shortly.</p>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="close btn btn-secondary btn-grad" data-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
           </div>
+      
+          <div class="d-flex justify-content-end">
+
+            <button class="btn btn-grad btn-submit" id="btnSubmit" data-toggle="modal" data-target="#submitModal">Submit</button>
+          </div>
+
+
+
         </form>
       </div>
     </section>
