Feat: adjust cart page to remove submit and table if no items

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <div class="pg-title-wrapper p-4">
           <h2>Cart Items</h2>
         </div>
-        <table class="table rounded shadow p-3 mb-5 bg-white">
+        <table class="table rounded shadow p-3 mb-5 bg-white" id=cartTable>
           <thead>
             <tr>
               <th scope="col">#</th>
