--- a/index.html
+++ b/index.html
@@ -220,6 +220,14 @@
       integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
       crossorigin="anonymous"
     ></script>
+    <script 
+    type="text/javascript" 
+    src="//cdnjs.cloudflare.com/ajax/libs/jquery.lazy/1.7.9/jquery.lazy.min.js"
+    ></script>
+    <script 
+    type="text/javascript" 
+    src="//cdnjs.cloudflare.com/ajax/libs/jquery.lazy/1.7.9/jquery.lazy.plugins.min.js"
+    ></script>
     <script type="text/javascript" src="index.js"></script>
     <script src="utilities/apiCalls.js"></script>
   </body>
